// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MDUtils.proc "HTML: NOTE_REF_WITH_REHYPE: PREVIEW" 1`] = `
VFile {
  "contents": "<h1 id=\\"foo\\">Foo</h1>
<p></p><p></p><div class=\\"portal-container\\">
<div class=\\"portal-head\\">
<div class=\\"portal-backlink\\">
<div class=\\"portal-title\\">From <span class=\\"portal-text-title\\">Alpha</span></div>
<a href=\\"alpha-id\\" class=\\"portal-arrow\\">Go to text <span class=\\"right-arrow\\">→</span></a>
</div>
</div>
<div id=\\"portal-parent-anchor\\" class=\\"portal-parent\\" markdown=\\"1\\">
<div class=\\"portal-parent-fader-top\\"></div>
<div class=\\"portal-parent-fader-bottom\\"></div><p><a href=\\"bar.html\\">Bar</a></p>
</div></div><p></p><p></p>
<hr>
<h2 id=\\"children\\">Children</h2>
<ol>
<li><a href=\\"foo.ch1.html\\">Ch1</a></li>
</ol>",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`MDUtils.proc "HTML: NOTE_REF_WITH_REHYPE: PREVIEW" 2`] = `
VFile {
  "contents": "<h1 id=\\"foo\\">Foo</h1>
<p></p><p></p><div class=\\"portal-container\\">
<div class=\\"portal-head\\">
<div class=\\"portal-backlink\\">
<div class=\\"portal-title\\">From <span class=\\"portal-text-title\\">Alpha</span></div>
<a href=\\"alpha-id\\" class=\\"portal-arrow\\">Go to text <span class=\\"right-arrow\\">→</span></a>
</div>
</div>
<div id=\\"portal-parent-anchor\\" class=\\"portal-parent\\" markdown=\\"1\\">
<div class=\\"portal-parent-fader-top\\"></div>
<div class=\\"portal-parent-fader-bottom\\"></div><p><a href=\\"bar.html\\">Bar</a></p>
</div></div><p></p><p></p>
<hr>
<h2 id=\\"children\\">Children</h2>
<ol>
<li><a href=\\"foo.ch1.html\\">Ch1</a></li>
</ol>",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`MDUtils.proc "HTML: NOTE_REF_WITH_REHYPE: PUBLISHING" 1`] = `
VFile {
  "contents": "<h1 id=\\"foo\\"><a aria-hidden=\\"true\\" class=\\"anchor-heading\\" href=\\"#foo\\"><svg aria-hidden=\\"true\\" viewBox=\\"0 0 16 16\\"><use xlink:href=\\"#svg-link\\"></use></svg></a>Foo</h1>
<p></p><p><iframe src=\\"/refs/alpha-id---0\\"></iframe></p>
<hr>
<h2 id=\\"children\\"><a aria-hidden=\\"true\\" class=\\"anchor-heading\\" href=\\"#children\\"><svg aria-hidden=\\"true\\" viewBox=\\"0 0 16 16\\"><use xlink:href=\\"#svg-link\\"></use></svg></a>Children</h2>
<ol>
<li><a href=\\"/notes/foo.ch1.html\\">Ch1</a></li>
</ol>",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`MDUtils.proc "HTML: NOTE_REF_WITH_REHYPE: PUBLISHING" 2`] = `"alpha-id---0.json"`;

exports[`MDUtils.proc "HTML: NOTE_REF_WITH_REHYPE: PUBLISHING" 3`] = `
"{\\"node\\":{\\"type\\":\\"root\\",\\"children\\":[{\\"type\\":\\"paragraph\\",\\"children\\":[{\\"type\\":\\"wikiLink\\",\\"value\\":\\"bar\\",\\"data\\":{\\"alias\\":\\"Bar\\",\\"permalink\\":\\"bar.html\\",\\"exists\\":true,\\"hName\\":\\"a\\",\\"hProperties\\":{\\"href\\":\\"bar.html\\"},\\"hChildren\\":[{\\"type\\":\\"text\\",\\"value\\":\\"Bar\\"}]},\\"position\\":{\\"start\\":{\\"line\\":1,\\"column\\":1,\\"offset\\":0},\\"end\\":{\\"line\\":1,\\"column\\":8,\\"offset\\":7},\\"indent\\":[]}}],\\"position\\":{\\"start\\":{\\"line\\":1,\\"column\\":1,\\"offset\\":0},\\"end\\":{\\"line\\":1,\\"column\\":8,\\"offset\\":7},\\"indent\\":[]}}]},\\"refId\\":{\\"id\\":\\"alpha-id\\",\\"link\\":{\\"from\\":{\\"fname\\":\\"alpha\\"},\\"data\\":{\\"type\\":\\"file\\",\\"anchorStartOffset\\":0},\\"type\\":\\"ref\\"}}}
"
`;

exports[`MDUtils.proc "HTML: NOTE_REF_WITH_REHYPE: REGULAR" 1`] = `
VFile {
  "contents": "<h1 id=\\"foo\\">Foo</h1>
<p></p><p></p><div class=\\"portal-container\\">
<div class=\\"portal-head\\">
<div class=\\"portal-backlink\\">
<div class=\\"portal-title\\">From <span class=\\"portal-text-title\\">Alpha</span></div>
<a href=\\"alpha-id\\" class=\\"portal-arrow\\">Go to text <span class=\\"right-arrow\\">→</span></a>
</div>
</div>
<div id=\\"portal-parent-anchor\\" class=\\"portal-parent\\" markdown=\\"1\\">
<div class=\\"portal-parent-fader-top\\"></div>
<div class=\\"portal-parent-fader-bottom\\"></div><p><a href=\\"bar.html\\">Bar</a></p>
</div></div><p></p><p></p>
<hr>
<h2 id=\\"children\\">Children</h2>
<ol>
<li><a href=\\"foo.ch1.html\\">Ch1</a></li>
</ol>",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`MDUtils.proc "HTML: NOTE_REF_WITH_REHYPE: REGULAR" 2`] = `
VFile {
  "contents": "<h1 id=\\"foo\\">Foo</h1>
<p></p><p></p><div class=\\"portal-container\\">
<div class=\\"portal-head\\">
<div class=\\"portal-backlink\\">
<div class=\\"portal-title\\">From <span class=\\"portal-text-title\\">Alpha</span></div>
<a href=\\"alpha-id\\" class=\\"portal-arrow\\">Go to text <span class=\\"right-arrow\\">→</span></a>
</div>
</div>
<div id=\\"portal-parent-anchor\\" class=\\"portal-parent\\" markdown=\\"1\\">
<div class=\\"portal-parent-fader-top\\"></div>
<div class=\\"portal-parent-fader-bottom\\"></div><p><a href=\\"bar.html\\">Bar</a></p>
</div></div><p></p><p></p>
<hr>
<h2 id=\\"children\\">Children</h2>
<ol>
<li><a href=\\"foo.ch1.html\\">Ch1</a></li>
</ol>",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;
